Reduce allocations by 16% (in jmh benchmark scenario), by manually setting to ArrayList element places without copying and targetting the same samples list instead of creating smaller lists that then are added to the bigger one